Job/Logs/.ipynb_checkpoints/Train_architecture_relu_swish-checkpoint.err
  File "Train_job.py", line 57
    Similar_training = True, Norm_Choix = 0, Method_data = 4,activ_fct = act, 
                   ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "Train_job.py", line 59, in <module>
    TensorBoard_logs = False , Hybrid = False, Scaling_type = 'Linear', Fraction_save = 10)
  File "/home/bouissob/Code/Scripts/Trainings.py", line 415, in training
    self.Generate_training_index(**kwargs)
  File "/home/bouissob/Code/Scripts/Trainings.py", line 454, in Generate_training_index
    df = Template.Fetch_data(Template.Dataset_train, Template.Oc_mod_type)
  File "/home/bouissob/Code/Scripts/Trainings.py", line 162, in Fetch_data
    if '%' in self.Cutting:
TypeError: argument of type 'bool' is not iterable
Traceback (most recent call last):
  File "Train_job.py", line 5, in <module>
    from Scripts import Trainings
  File "/home/bouissob/Code/Scripts/Trainings.py", line 144
    elif '%' in self.Cutting:
       ^
SyntaxError: invalid syntax
ben
